--- a/cesium/cesium_test/examples/main.html
+++ b/cesium/cesium_test/examples/main.html
@@ -12,7 +12,7 @@
     <div id="map" style="width:600px;height:400px;"></div>
     <input id="enable" type="button" value="Enable/disable" />
     
-    <input type="button" value="Enable/disable lightning (only 3d)" onclick="javascript:toggleTime()"/>
+    <input type="button" value="Enable/disable lightning (only 3  awefd)" onclick="javascript:toggleTime()"/>
     <select id="time">
       <option value="">Now</option>
       <option value="0">0:00</option>
